[project]
name = "spherical-scikit-learn"
version = "0.1.1"
dependencies = [
    "scikit-learn>=1.4.1.post1",
    "numpy",
    "scipy>=0.11.0",
    "threadpoolctl >= 2.2.0",
]

[project.urls]
Documentation = "https://github.com/lijiaqi/spherical-scikit-learn.git"
Repository = "https://lijiaqi.github.io/spherical-scikit-learn/"

[project.optional-dependencies]
test = ["pytest", "matplotlib"]

[build-system]
requires = [
    "setuptools>=61",
    "wheel",
    "Cython>=3.0",
    "scikit-learn>=1.4.1.post1",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"spsklearn.cluster" = ["*.pyx", "*.pxd"]

[tool.setuptools]
packages = ["spsklearn"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
